--- a/andersenc/index.html
+++ b/andersenc/index.html
@@ -214,6 +214,89 @@ https://www.incose.org</li>
 </article>
 
          <!-- Module 2.2 Blog Post Starts here -->
+          <article>
+          <header class="article-header">
+          <h2>Module 2.2 Blog Post</h2>
+          <h3>Support User Thinking</h3>
+          </header>
+
+          <p>In exploring human-centered design, it has become very clear to me that usability is deeper than what users see on a screen. Rather, it is centered around the level of thinking, remembering, and effort they must put in when using the system. You can create a system that looks clean and modern, while still being frustrating for users if it involves forced thinking or requires the user to remember too much. Good design takes into account how people intuitively understand and interact with technology.</p>
+
+          <figure>
+          <img src="images/notes.jpg" alt="Notebook and computer setup representing memory and external tools" style="height:400px; width:auto;">
+          <figcaption>
+          Photo by Kevin Canlas on Unsplash
+          </figcaption>
+          </figure>
+
+          <h3>Memory & Mental Models</h3>
+
+          <p>One of the major ideas from the readings is that human thinking is not just in our heads. Much of what we think is empowered by what tools exist around us. Writing things down, using reminders or leaning onto digital systems to help remember and organize information is something people do. This is sometimes called distributed cognition, where you allow your thinking to spread out to external tools instead of having everything in your mind. Well-designed digital systems enable that process and make users better agents in it. Badly designed ones add extra cognitive labor and frustration (Johnson, 2020).</p>
+
+          <p>Memory is one of the big factors in how people interact with systems. People have short working memory, and struggle to hold too much all at once. A system that wants users to remember steps, settings, or instructions becomes harder to use. Systems are not meant to display data at random, but on sight so that the user uses perception, rather than memory, to guide their choices. Johnson points out that users should not need to remember what can be said to them from the system, because that adds to cognitive load unnecessarily (Johnson, 2020).</p>
+
+          <p>Mental models influence the interaction behavior of users with the system as well. A mental model basically means an individual’s sense of how something works. These models are constructed by users from their experiences with similar systems in the past. If a system follows the model that they’ve used before, the system feels more user-friendly. But if it acts differently, users need to stop and figure things out that take effort and attention. Designing for the familiar is the best practice, because rather than making a user learn a pattern from scratch, it lets them rely on what they already know and doesn’t constantly teach them unfamiliar behavior.</p>
+
+          <h3>Cognitive Load</h3>
+
+          <figure>
+            <img src="images/phone.jpg" alt="Person using a phone interface" style="height:400px; width:auto;">
+            <figcaption>
+            Photo by SumUp on Unsplash
+            </figcaption>
+          </figure>
+
+          <p>Cognitive load is the amount of mental effort involved in using an item. When that kind of effort is too much, users end up confused, overwhelmed and frustrated. Poor design is a result of a system requiring a lot of attention or memory from the user. The readings gave several examples, one being when a website asks for a “member ID,” but the user knows only his username, he has to pause and figure out what the system means, which takes their mind away from their real goal. They are focusing on decoding the interface, not on completing an assignment. Users should not have to jump through hoops in the name of doing simple stuff (Johnson, 2020).</p>
+
+          <p>A second example is in systems where users are expected to diagnose problems themselves. If a checkout process collapses and returns an error message then they’ll be left to puzzle over the problem. This sort of thing requires a certain level of technical knowledge and additional effort that users shouldn’t have to be burned with. I myself have faced this issue when using Canvas. When attempting to upload certain assignments or embedded media in discussion posts there have been several instances in which an error message will be displayed without explanation or support. Thankfully, I have enough basic knowledge to troubleshoot myself, but when this has happened it has still disrupted my workflow and taken time away from additional tasks I needed to do in order to complete assignments. The system ideally should accommodate that complexity and be clear enough to guide its users.</p>
+
+          <p>Designers need to minimize the focus that users place on the system in order they get to do what they really want to do (Krug, 2014). That’s something I can say happens quite often in settings menus from my experience. Some apps have so many options that it’s hard to know what to change. You are left guessing or doing it all on default because it is too much to digest. That, of course, is a textbook example of too much cognitive load. If the system simplified the options or grouped them better, it would be easier to navigate.</p>
+
+          <h3>Tesler's Law</h3>
+
+          <p>Tesler’s Law explains that every system has some level of complexity that can’t be removed (Yablonski, 2024). The complexity exists somewhere; it either sits there with the user, or it gets processed by the system and the designers. Good design tries to move out as much of that complexity as possible from the user and into the system (Interaction Design Foundation, n.d.). Autofill in forms or checkout pages is a great example. Instead of forcing users to type in the same information a thousand times, the system automatically remembers it or completes it. The system manages the complexity of storing and accessing that information, rather than the user. This minimizes effort and improves the experience. The same is true of functions such as suggested email recipients or saved addresses. The system is doing more work so the user can do less.</p>
+
+          <p>Simultaneously, Tesler’s Law instructs designers to not dumb things down to the point where users can’t grasp what is happening. There is always an element of complexity, and it has to be handled carefully. The idea isn’t to get rid of complexity altogether but to ensure users don’t store more of it than necessary.</p>
+
+          <h3>Consistency & Feedback</h3>
+
+          <p>Consistency is one of the easiest ways of alleviating cognitive burden. When a system behaves consistently across pages and features, users learn how it performs at an even higher rate. They don’t have to relearn new interactions when they transition to a new screen. That consistency not only informs user knowledge, but also encourages confidence building and builds user models. Consistent design allows users to move information from one part of a system to another, as Johnson also notes, which reduces the amount of thinking (Johnson, 2020).</p>
+
+          <p>Feedback is also important. While users interact with a system, they want to know what’s happening. When they click an item that doesn’t work, they may believe the system didn’t perform in that way. If they turn in a form and do not receive confirmation, they may submit it again. Basic feedback, like loading and status indicators, progress bars, or confirmations, should help users know what the system is doing. This provides more confidence and means no doubt in which place. An excellent example of that is a website that displays a progress indicator at checkout. It lets users see where they are and what remains. That brings down memory demands, as users don’t need to mentalize how and where they are. They can just see it. That clear feedback keeps the users centered and enables them to progress.</p>
+
+          <h3>Designing for Real Users</h3>
+
+          <figure>
+            <img src="images/thinking.jpg" alt="Person thinking while using laptop" style="width:60%; max-width:700px;">
+            <figcaption>
+              Photo by Adam Satria on Unsplash
+            </figcaption>
+          </figure>
+
+          <p>What is interesting, if not shocking, is the generalization that systems frequently expect people to read instructions and spend time learning the interface. If nothing else, we learn how to respond at a faster pace. In fact, most users just dive right in and attempt to be able to accomplish what they need to do. This means that designers need to make systems comprehensible as they are being built. User advice should be embedded within the interface as opposed to trusting users to figure it out beforehand (Johnson, 2020). Designing for people means designing for real behavior. People skim, they forget things, they get distracted; they don’t always pay attention to instructions. Systems must accept that fact, not expect flawless users.</p>
+
+          <p>Designers can make the whole thing feel easier and more intuitive when they reduce cognitive load, remain consistent, and offer transparent feedback. But memory and cognitive models are in all aspects very powerful in how people use technology. When systems recognise cognitive boundaries, and match known patterns of human engagement and behavior, instead users may focus on their own goals in place of its interface. Tesler's Law states that designers know that there will always be complexity, but complexity should always be taken care of by the system wherever possible. Designers can create systems that feel simple despite being complex by design through prioritizing consistency, feedback and reduced cognitive load.</p>
+
+          <footer class="article-footer">
+            <h3>Sources</h3>
+            <ol>
+              <li>
+                Interaction Design Foundation. (n.d.). <em>Tesler’s law: The law of conservation of complexity</em>. https://www.interaction-design.org/literature/article/tesler-s-law-the-law-of-conservation-of-complexity
+              </li>
+              <li>
+                Johnson, J. (2020). <em>Designing with the mind in mind</em> (3rd ed.). Elsevier. https://bookshelf.vitalsource.com/books/9780128182031
+              </li>
+              <li>
+                Krug, S. (2014). <em>Don’t make me think, revisited: A common sense approach to web usability</em> (3rd ed.). New Riders.
+              </li>
+              <li>
+                Yablonski, J. (2024). <em>Laws of UX</em> (2nd ed.). O’Reilly Media, Inc. https://cwu.vitalsource.com/books/9781098146924
+              </li>
+            </ol>
+          </footer>
+          </article>
+
+
 
          <!-- Module 2.3 Blog Post Starts here -->
 
