Updated Blog Post 2.1
Added essay and relevant pictures,

--- a/gavrilisn/index.html
+++ b/gavrilisn/index.html
@@ -272,6 +272,230 @@
 
 
          <!-- Module 2.2 Blog Post Starts here -->
+          <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>What Makes Digital Systems Usable</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            max-width: 900px;
+            margin: auto;
+            padding: 20px;
+        }
+        img {
+            width: 100%;
+            margin: 20px 0;
+        }
+        h1, h2, h3 {
+            margin-top: 30px;
+        }
+        .attribution {
+            font-size: 0.8em;
+            color: #555;
+        }
+    </style>
+</head>
+
+<body>
+
+<h1>What Makes Digital Systems Usable</h1>
+
+
+<img src="dashboard-clutter-1.jpg" alt="Cluttered dashboard interface example">
+
+
+
+<h2>Introduction</h2>
+<p>
+    The usability of a digital system depends on how well it aligns with the way people think, remember, and make decisions. 
+    Usability isn’t just about clean layouts or intuitive buttons. It is also about how efficiently the system guides the user 
+    through habits and mental shortcuts. Every digital interaction—from checking your email to buying items on Amazon—relies 
+    on our memory and the cognitive load that it carries. For the user to have the best experience, the designer needs to keep 
+    the user in mind. When designers ignore these factors, it can lead to users feeling frustrated, overwhelmed, or even lost. 
+    The best systems feel effortless for users to navigate.
+</p>
+
+<p>
+    This blog post will show how memory and mental models influence interactions, why feedback is important, and how poor design 
+    creates unnecessary cognitive load. To put it simply, usability is about aligning technology with the human mind.
+</p>
+
+<h2>Memory</h2>
+<p>
+    As I know more than anyone, human memory is limited and often depends on context. It is easier for people to rely on 
+    recognition rather than remembering. We also develop mental models to simplify more complex systems. When a digital 
+    interface aligns with these models, it creates a platform that feels intuitive and easy to use.
+</p>
+
+<h3>Memory Limits</h3>
+<p>
+    Our working memory can only hold so much information at one time. For this reason, it is important that interfaces minimize 
+    the need for users to remember instructions or complex sequences. Recognition is easier than recall, which is why labels, 
+    icons, and familiar layouts matter. They help reduce the cognitive load on the user (Johnson, 2020).
+</p>
+
+<p>
+    Let’s look at an example. Imagine a website that hides its essential navigation behind unfamiliar icons or in an unfamiliar 
+    layout. Returning users would have to remember how to navigate the site, making the visit feel like a chore. I experienced 
+    this when navigating Microsoft Access. While some people may use it well after practice, there is a steep learning curve. 
+    I constantly had to recall what each button did, which increased my cognitive load.
+</p>
+
+<h3>Mental Models</h3>
+<p>
+    People expect digital systems to behave like past experiences. If someone opens their email, they expect the inbox to be on 
+    the left and the compose window on the right. If a new email platform reversed these, users would likely feel frustrated.
+</p>
+
+<p>
+    For example, when I used an Android phone, the web browser search bar was at the top of the screen. When I switched to an 
+    iPhone, the search bar was at the bottom. This adjustment was frustrating—even though it wasn’t poor design—because it 
+    violated my mental model.
+</p>
+
+<p>
+    Visible cues also matter. Users form mental models based on past experiences, not how a digital system actually operates 
+    (Norman, 2013). A remove button is often a red “X,” and a save button is still a floppy disk icon. These cues guide users 
+    intuitively through digital environments.
+</p>
+
+<h2>Usability Principles</h2>
+<p>
+    Two of the most crucial usability principles are consistency and feedback. These support memory and mental models. When a 
+    system is predictable, users are much more likely to navigate it with ease.
+</p>
+
+<p>
+    Consistency allows users to transfer knowledge from one part of a system to another. This means people do not have to learn 
+    new patterns and can free up cognitive resources for real tasks (Johnson, 2020).
+</p>
+
+<p>Some examples of important interface consistencies include:</p>
+<ul>
+    <li>Layout</li>
+    <li>Iconography</li>
+    <li>Navigation design</li>
+    <li>Interactive patterns</li>
+</ul>
+
+<p>
+    When a system is consistent with these, users can decrease their cognitive load and focus on more important tasks.
+</p>
+
+<img src="meta_tag_analyzer_tool.jpeg" alt="Meta tag analyzer tool interface example">
+
+
+<p><strong>[Image 2 Placeholder: Example of inconsistent UI — add attribution here]</strong></p>
+
+<p>
+    I experienced an inconsistent system when ordering a t-shirt from a new site. The navigation was different from what I had 
+    seen before, and it took time to figure out. I ended up not making the purchase, but had it been easier to navigate, I 
+    likely would have bought the shirt.
+</p>
+
+<h3>System Feedback</h3>
+<p>
+    System feedback tells the user what the system is doing, what actions occurred, and whether issues exist. Without feedback, 
+    users may not know if they completed their goals successfully or may repeat actions unnecessarily.
+</p>
+
+<p>
+    Norman (2013) explains that feedback is essential for bridging the “gulf of evaluation,” which is the gap between what users 
+    expect and what the system communicates. Good feedback is clear, concise, and timely.
+</p>
+
+<p>
+    For example, when I upload a file to Canvas, a progress bar appears followed by a confirmation message. If the upload fails, 
+    Canvas notifies me. Without this feedback, I would be frustrated and unsure whether my work was submitted.
+</p>
+
+<h2>Poor Design</h2>
+<p>
+    Cognitive load increases when systems force users to think more than necessary. Too much information can overwhelm users. 
+    This includes interfaces that are cluttered, inconsistent, or misaligned with mental models.
+</p>
+
+<p>Some examples include:</p>
+
+<ul>
+    <li>
+        <strong>Overloaded Dashboards:</strong>  
+        Canvas shows only relevant classes in the navigation menu. Showing all past classes would overwhelm users and violate 
+        the principle of progressive disclosure.
+    </li>
+
+    <li>
+        <strong>Unclear Navigation and Hidden Controls:</strong>  
+        Hover-only menus require users to remember where controls are located. This increases cognitive load and confuses new users.
+    </li>
+
+    <li>
+        <strong>Conflicting Patterns:</strong>  
+        If buttons behave differently across screens, users struggle to form a consistent mental model, slowing down their experience.
+    </li>
+</ul>
+
+<h2>Tesler’s Law</h2>
+<p>
+    Tesler’s Law states that every system has a certain amount of complexity, which must be balanced between the user and the 
+    system (Tesler, 1984). Good design shifts complexity away from the user.
+</p>
+
+<p>
+    Examples include auto-fill forms, predictive text, and smart suggestions. When designers push complexity onto users, 
+    usability decreases. For instance, when I enter personal information in Microsoft Edge, it autofills the fields for me, 
+    reducing tedious tasks and improving my experience.
+</p>
+
+<h2>Principles from <em>Designing with the Mind in Mind</em></h2>
+
+<h3>Cognitive Load</h3>
+<p>
+    Cognitive load refers to how much mental effort a system requires. Johnson (2020) emphasizes minimizing unnecessary mental 
+    effort by reducing steps, simplifying choices, using familiar patterns, and ensuring intuitive controls.
+</p>
+
+<h3>Perceptual Organization</h3>
+<p>
+    Humans naturally group related items together. Interfaces that follow this principle help users process information more 
+    effectively. When grouping is inconsistent, confusion and frustration follow.
+</p>
+
+<p>
+    For example, placing a delete button next to an insert button can lead to unintended actions.
+</p>
+
+<img src="pexels-mart-production-8217486.jpg" alt="Person using a digital device">
+
+
+<p><strong>[Image 3 Placeholder: Example of poor grouping in UI — add attribution here]</strong></p>
+
+<h2>Conclusion</h2>
+<p>
+    Usability is not just about aesthetics—it’s about aligning systems with the way people think. When designers respect memory, 
+    mental models, and habits, they create intuitive systems that reduce cognitive load and improve user experience.
+</p>
+
+<h2>References</h2>
+<p>
+    Johnson, J. (2020). <em>Designing with the mind in mind: Simple guide to understanding user interface design guidelines</em> (3rd ed.). Morgan Kaufmann.
+</p>
+
+<p>
+    Norman, D. (2013). <em>The design of everyday things</em> (Revised and expanded ed.). Basic Books.
+</p>
+
+<p>
+    Tesler, L. (1984). The complexity of user interface design. <em>Interactions</em>, 1(2), 23–25.
+</p>
+
+</body>
+</html>
+
+
 
          <!-- Module 2.3 Blog Post Starts here -->
 
