Update Blog Post
Updated index.html to include Module 2.2 Blog Post. Made corrections to code. Added images.

--- a/pottsm/index.html
+++ b/pottsm/index.html
@@ -229,7 +229,117 @@ Systems that are unable to evolve over time will become obsolete extremely fast.
 
 
          <!-- Module 2.2 Blog Post Starts here -->
+          <article>
+            <header class="article-header">
+               <h2 style="text-align: center;">Module 2.2 Blog Post - Support User Thinking</h2>
+            </header>
+          <h3 style="text-align: center;">Making A Digital System Usable</h3>
+           <p style="text-indent: 2em;">Placing a modern or clean look in a digital system does not make that system any easier to use. You cannot say your system has an intuitive design, yet asks for unnecessary lifts from the user, increasing the cognitive load and making even the simplest task feel like taking on the fight of your life. Making a system “usable” can only be achieved when it can respect how a person thinks. It is less about the look and more about the function.
+<p style="text-indent: 2em;">This post will explore how memory and mental models influence user interactions, why consistency and system feedback are crucial in improving usability, and how poor design choices can create unnecessary cognitive load for the user. We will use a combination of course materials, Tesler’s Law, UX principles, including personal experiences.
+</p> 
+ <h3 style="text-align: center;">Memory and Mental Models</h3>
+<p style="text-indent: 2em;">Our ability, as humans, to remember and memorize is extremely powerful; however, it has extreme limitations to balance out those powers. If digital systems ignore those limitations of the human mind, it creates friction that provides a poor user experience. It is only when a system is built around those limitations will it succeed.</p>
+ <h3 style="text-align: center;">Working Memory</h3> 
+<p style="text-indent: 2em;">Our ability to hold information, or working memory, like some inner mental notepad, is extremely small. In fact, a paper titled “The Magical Number Seven, Plus or Minus Two,” proposed that seven, plus or minus two, is the limit humans have for the number of unrelated items in working memory (Johnson, 2013). When a system requires users to remember more than the ideal number of steps, it begins to put strain on the working memory, an already limited resource.</p>
+<p>Real-World Examples:</p>
+<p style="text-indent: 2em;">I once worked at a tech company that required the use of the most complex meeting scheduling system I have ever experienced. Each room was named, so it sounds easy enough, find the name of the room you want to reserve and the time. The problem was the nomenclature was the same throughout multiple buildings, so you needed to know the building name, floor number, room name, time, whether electronics were needed, etc. This was on top of not being able to modify choices, so if I made a mistake, I could either cancel and start all over or send the invite out and start making real-time adjustments. 
+</p>
+<p style="text-indent: 2em;">Due to constant moving around, sometimes it was difficult to remember what building you were in. If the system allowed for details to help guide me along the process, making sure I didn’t make any mistakes, it would have helped to reduce my cognitive load, focusing more on me remembering every piece of information, rather than understanding the system.</p>
+<h3 style="text-align: center;">Mental Models</h3>
+<p style="text-indent: 2em;">A mental model is how people form representations of how a system works. Think of them as whole brain events, a combination of areas of the brain contributing to build this idea of the working system and, because they aren’t static, how they change over time (Duncan, 2025). When a system can align with a user’s mental model, their past experiences, cultural norms, etc., they begin to feel more intuitive, all because of structure, not aesthetics.</p>
+<p>Example:</p>
+<p style="text-indent: 2em;">When visiting a company web page, most users would expect to interact with designs that they have learned from thousands of digital experiences. A logo returning them to the homepage or a shopping cart icon letting users see what items they have chosen to purchase. </p>
+<figure style="text-align: center;">
+        <img src="https://media.licdn.com/dms/image/v2/D4D12AQEtSvrPj2rM3g/article-cover_image-shrink_600_2000/article-cover_image-shrink_600_2000/0/1674011072914?e=2147483647&v=beta&t=WL3jiOO-qioUOuOCBEwcu15h6aQSomcXuBfA_Ag1C5s" alt="Mental models illustration" width="450">
+        <figcaption>
+            Figure 1: Illustration from "Mental Models: The Key to Clear Thinking and Problem-Solving."  
+            Yadav, A. (n.d.). <em>Mental models: The key to clear thinking and problem solving</em> [Illustration]. LinkedIn.  
+            https://www.linkedin.com/pulse/mental-models-key-clear-thinking-problem-solving-abhishek-yadav
+        </figcaption>
+    </figure><br>
+    <p style="text-indent: 2em;">If a system breaks from the norms, users begin to lose trust. They second-guess their actions and the goal of the system they are intending to use. </p>
+    <p style="text-indent: 2em;">I recently visited a web site that sold various items for men. From clothing to home goods, it was sort of like a one-stop-shop. Their issue was with their menu layout they chose to use. Instead of having parent categories within a dropdown menu, they placed each category along the menu line. One link was to their home goods section; however, when you click a link, you couldn’t go back to the homepage by clicking their logo. If you clicked “Home”, it wouldn’t take you home, but to the “Home Goods” section. The only way to go back was to physically use the back button on your web browser. An extremely disorienting moment, nothing breaking, but noticeable. </p>
+    <h3 style="text-align: center;">Habits</h3>
+    <figure style="float: left; margin-right: 15px; width: 250px; text-align: center;">
+    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh8P6E1a37L8LfrIC50rK3t8IWbEJJKBgp4zUuZOGtNDm59xpI14kJyPUQi800YaGrx-uWlt6nrq8WhqKQ6YhQZw1QEkvhMI07MyfcifWLHu5k02agtZBaYtOMZySdQ2hZPO6vdJ302RbzpP4Ki3KC0b3Ei2t7CDRnoWF3oDbtL8EFTav1RCaNZWsLeRPo/s1080/How%20to%20Build%20Transformative%20Habits.jpg" alt="description" style="width: 100%;">
+    <figcaption style="font-size: 0.9em;">
+        Figure 2: Illustration from "How to Build Transformative Habits." Gian, C.K. (2025, March 15). How to Build Transformative Habits [Illustration]. VHTC. https://www.vhtc.org/2025/03/how-to-build-transformative-habits.html
+    </figcaption>
+</figure>
+<br>
+<br>
+<br>
+<br>
+<br>
+<p style="text-indent: 2em;">
+    Once you have a pattern understood, you become reliant on it. You expect it to work the same way every time, placing yourself into a momentary autopilot mode. This reliance comes from everything, the button placement, logos and labels, and more complex ones like workflows. Disrupt any of those and you increase the cognitive effort needed to accomplish the same tasks, turning what was once an automated procedure into a mentally draining manual one.
+</p><br>
+<br>
+    <br>
+        <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+<h3 style="text-align: center;">Consistency and Feedback</h3>
+<p style="text-indent: 2em;">Consistency and Feedback are two usability principles that help to reduce the cognitive load of system users. They help them to feel in control when making decisions and reinforce mental models.</p>
+<h3 style="text-align: center;">Consistency</h3>
+<p style="text-indent: 2em;">Not to be confused with homogenizing a system, consistency, or design consistency, is a principle used in creating systems that enhance the experience through uniformity across elements (Falode, 2024). Consistency allows a user to rely on recognizing familiar patterns and processes rather than recalling them.</p>
+<p style="text-indent: 2em;">When elements such as button placement, typography, and navigation structure are stable, confidence in users will build. On the other hand, if there are too many shifts, that confidence wanes and users must resort to re-learning areas of the system.</p>
+<h3 style="text-align: center;">Feedback</h3>
+<p style="text-indent: 2em;">This usability principle is integral in letting users know that a system they are using has received whatever action they have made and is actively setting out to accomplish that task. When there is no feedback provided, it leaves users feeling unsure about what they have done. This triggers events such as repeated clicks, mis-clicks, and even abandoning the task altogether.</p>
+<figure style="float: right; margin-left: 15px; width: 450px; text-align: center;">
+    <img src="https://archive.smashing.media/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/8a4f8d2c-5f71-4233-b4ac-a135a970521a/floops-loops.png" alt="description" style="width: 100%;">
+    <figcaption style="font-size: 0.9em;">
+        Figure 3: Diagram from "How To Design Outstanding Feedback Loops." Baxter, L. (2013, February 15). How To Design Outstanding Feedback Loops [Diagram]. Smashing Magazine. https://www.smashingmagazine.com/2013/02/designing-great-feedback-loops/
+    </figcaption>
+</figure>
+<br>
+<br>
+<br>
+<br>
+<br>
+<p style="text-indent: 2em;">
+    Good feedback is almost instantaneous and clear. The user understands what the feedback is, where it comes from, and why it is happening. It doesn’t overwhelm the user with extensive information, just what is needed. This could be something as simple as a button changing color after it is clicked or a confirmation message appearing after you have submitted a form.
+</p>
+<br>
+    <br>
+        <br>
+            <br>
+            <br>
+            <br>
+            <br>
+           <p style="text-indent: 2em;">These small but extremely important signals help to improve the usability by letting the users see what is happening, not trying to guess if they did the task correctly.</p>
+ <p>Real-World Examples:</p>  
+ <p style="text-indent: 2em;">I recently made a purchase online for a pretty significant amount of money. I did tons of research to make sure that the website that I ordered from was legit and I wouldn’t be a part of any scam. Upon completing my purchase, I was given no notification that the payment went through or the order was received. I saw the money come out of my account and started to panic, thinking I did something wrong and maybe I inadvertently canceled the order or worse, got scammed. Two emails and a phone call later the company was able to see that their notification system had gone down and wasn’t sending confirmation emails. This helped me to gain trust again but shows that missing feedback only leads to confusion and loss of trust.</p>
+<h3 style="text-align: center;">When Designs Fail</h3>
+<p style="text-indent: 2em;">As mentioned earlier in this post, creating poorly designed systems not only slows down how a user interacts with it, but it also increases the cognitive load. When systems require more of the user than is needed, or convey unclear messages, cognitive load rears its ugly head.</p>
+<h3 style="text-align: center;">Tesler’s Law</h3>
+<p style="text-indent: 2em;">What happens if you can’t reduce a process or design any further to reduce the complexity of it? What do you do with those pieces of the system that are complex by design and are integral to basic system functionality? </p>
+<p style="text-indent: 2em;">Tesler’s Law, sometimes known as the Law of Conservation of Complexity, claims that every system created has a level of complexity that cannot be reduced or eliminated, just moved around for the lack of a better phrase (Yablonski, 2024). So, who gets to carry this additional burden? It depends on the system.</p>      
+<p style="text-indent: 2em;">Think of it like this, a system with good usability will take on the added complexity to strive for a better user experience. The poor system will make the user carry the weight. A poor example of a system passing the burden to the user is through a checkout process that requires the user to input both shipping and billing even if the address is the same. A system with good usability would require the user to enter one or the other and then click a box stating, “shipping is the same as billing.” Having users enter in the information manually twice increases the risk of error, which is what Tesler’s Law is trying to warn. When a designer fails to balance the complexity of a system, the user is the one who pays the higher price.</p>
+<h3 style="text-align: center;">Usability and Respect</h3>
+<p style="text-indent: 2em;">Usability is a small act of respect. You keep the user’s experience in mind and acknowledge the elements they bring during an interaction. Usability understands that resources are finite and the phrase, “Less is more,” is the motto. A usable system helps to create intuitive experiences for users and is predictable, adapting to their way of thinking. When a digital system can respect the human mind and how it functions, they become aligned and the interaction becomes seamless.</p>
+<section id="sources">
+  <h3>Sources</h3>
 
+  <p>Duncan, J. (2025). Construction and use of mental models: Organizing principles for the science of brain and mind. Neuropsychologia. Retrieved from: <a href="https://www.sciencedirect.com/science/article/pii/S002839322400277X">https://www.sciencedirect.com/science/article/pii/S002839322400277X</a></p>
+
+  <p>Falode, E. (2024, October 20). Consistency and Familiarity: Key to Intuitive Interfaces. Retrieved from Cyberogism Web Site: 
+    <a href="https://cyberogism.com/consistency-familiarity-interfaces/">
+      https://cyberogism.com/consistency-familiarity-interfaces/
+    </a>
+  </p>
+
+  <p>Johnson, J. (2013). Capacity of attention (a.k.a. working memory). In J. Johnson, Designing with the Mind in Mind (p. 194). EPUB.</p>
+
+
+  <p>Yablonski, J. (2024). <em>Laws of UX.</em> O'Reilly Media. Retrieved from <a href="https://cwu.vitalsource.com/books/9781098146924">
+    https://cwu.vitalsource.com/books/9781098146924
+  </a>
+</p>
          <!-- Module 2.3 Blog Post Starts here -->
 
          <!-- Module 3.1 Blog Post Starts here -->
